# freshlinks

./: .cspell.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yaml  pypi.yaml
docs/: __main__.html  cache.html  canonicalize.html  index.html  scraper.html
src/freshlinks/: __init__.py  __main__.py  canonicalize.py
src/linkrot/: __main__.py
test/: test_canonical.py  test_google_canonicalization.py
