[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=40.8.0", "wheel"]

[tool.setuptools.packages.find]
where = ["src"]

[project]
authors = [{ name = "Metaist LLC", email = "metaist@metaist.com" }]
description = "Basic link checker."
name = "freshlinks"
version = "0.1.0"

dependencies = [
  # application dependencies are pinned
  "attrbox==0.1.5",
  "beautifulsoup4==4.12.2",
  "ezq==3.0.4",
  "lxml==4.9.3",
  "multiprocess==0.70.14",
  "requests==2.30.0",
  "ujson>=5.7.0",
  "url-normalize==1.4.3",
]
optional-dependencies = { dev = [
  # dev dependencies are latest
  "black",
  "coverage",
  "mypy",
  "pdm",
  "pdoc3",
  "pyright",
  "pytest-cov",
  "pytest",
  "ruff",
] }
readme = "README.md"
requires-python = ">=3.8"

[tool.pdm.scripts]
black = { shell = "black ." }
ruff = { shell = "ruff ." }
cspell = { shell = "cspell --gitignore '**/*.{py,txt,md,markdown}'" }
pyright = { shell = "pyright src test" }
mypy = { shell = """\
  mypy \
    --strict \
    --install-types \
    --non-interactive \
    src test
""" }

test = { shell = """\
  PYTHONPATH=src \
  coverage run --branch --source=src -m \
    pytest \
      --doctest-modules \
      --doctest-ignore-import-errors \
      src test; \
  coverage report -m
""" }

docs = { shell = """\
  rm -rf docs; \
  pdoc \
    --html \
    --output-dir docs \
    --config sort_identifiers=False \
    --config show_inherited_members=True \
    --force src/$(basename $(pwd));
  mv docs/**/* docs/
""" }

lint = { composite = ["black", "ruff", "cspell", "pyright", "mypy"] }
dev = { composite = ["lint", "test"] }
all = { composite = ["lint", "test", "docs"] }
